<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context="com.joelvasallo.chicagoevents.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/brewtobewild_imagebutton"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@null"
                android:contentDescription="@string/event_1_shortdesc"
                android:scaleType="centerCrop"
                android:src="@drawable/brewtobewild"
                android:onClick="launch_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/brewtobewild_imagebutton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_1_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFFFFFFF"
                    android:text="@string/event_1_dates"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_1_location"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/tasteofchicago_imagebutton"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:background="@null"
                android:contentDescription="@string/event_2_shortdesc"
                android:scaleType="centerCrop"
                android:src="@drawable/tasteofchicago" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tasteofchicago_imagebutton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_2_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFFFFFFF"
                    android:text="@string/event_2_dates"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_2_location"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/lollapalooza_imagebutton"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@null"
                android:contentDescription="@string/event_3_shortdesc"
                android:scaleType="centerCrop"
                android:src="@drawable/lollapalooza" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/lollapalooza_imagebutton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_3_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFFFFFFF"
                    android:text="@string/event_3_dates"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_3_location"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/airandwatershow_imagebutton"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@null"
                android:scaleType="centerCrop"
                android:contentDescription="@string/event_4_shortdesc"
                android:src="@drawable/airandwatershow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/airandwatershow_imagebutton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_4_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFFFFFFF"
                    android:text="@string/event_4_dates"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_4_location"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/riotfest_imagebutton"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@null"
                android:contentDescription="@string/event_5_shortdesc"
                android:scaleType="centerCrop"
                android:src="@drawable/riotfest" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/riotfest_imagebutton"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_5_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFFFFFFF"
                    android:text="@string/event_5_dates"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#BFB3DDF2"
                    android:text="@string/event_5_location"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>